# biomedbench

./: .gitignore  README.md
Applications/BioBPfree/reduced/Single_Core/Pico/: CMakeLists.txt
Applications/BioBPfree/reduced/Single_Core/Pico/Inc/training_lib/: training_batch_norm.h
Applications/BioBPfree/reduced/Single_Core/Pico/Src/training_lib/: Adam_optimizer.c  training_fully_connected.c  utils.c
Applications/BioBPfree/version_0/: README.md
Applications/BioBPfree/version_0/full/: README.md
Applications/BioBPfree/version_0/reduced/: README.md
Applications/BioBPfree/version_1/: README.md
Applications/BioBPfree/version_1/full/: Makefile
Applications/CognWorkMon/single_core/Apollo3/: README.md
Applications/CognWorkMon/single_core/Desktop/: Makefile  README.md
Applications/CognWorkMon/single_core/GAP/: GAP9.mk  Gapuino.mk  README.md
Applications/CognWorkMon/single_core/GAP_Cluster/: GAP9.mk  Gapuino.mk  README.md
Applications/CognWorkMon/single_core/Pico/: CMakeLists.txt  README.md
Applications/CognWorkMon/single_core/Pico/Inc/: FreeRTOSConfig.h  filter_signal_param.h  fx_fft.h  main.h  relativeEnergy.h  signal_pre_proc.h
Applications/CognWorkMon/single_core/Pico/Src/: biquad_filter.c  featureExtraction.c  fx_fft.c  main.c  powerfeatureExtraction.c  relativeEnergy.c  signal_pre_proc.c  statisticalFeatureExtraction.c  utils_functions.c
Applications/CognWorkMon/single_core/STM32L4R5/: CognWorkMon.ioc  README.md
Applications/CognWorkMon/single_core/X-Heep/: README.md
Applications/CoughDet/multicore/GAP/: GAP9.mk  Makefile
Applications/CoughDet/multicore/Pico/: CMakeLists.txt  README.md
Applications/CoughDet/multicore/Pico/Inc/: bio_input_55502.h  dct_lin.h  filters_parameters.h  frequency_features.h  helpers.h  launcher.h  mfcc_module.h  time_domain_feat.h  twiddles.h  welch_psd.h
Applications/CoughDet/multicore/Pico/Inc/PICO/: gpio_plus_sleep.h  multicore.h
Applications/CoughDet/multicore/Pico/Src/: feature_extraction.c  filtering.c  frequency_features.c  kiss_fft.c  kiss_fftr.c  launcher.c  mfcc_module.c  randomForest.c  time_domain_feat.c
Applications/CoughDet/multicore/Pico/Src/PICO/: gpio_plus_sleep.c  multicore.c
Applications/CoughDet/single_core/Pico/: CMakeLists.txt  README.md
Applications/CoughDet/single_core/Pico/Inc/: _kiss_fft_guts.h  audio_features.h  bio_input_55502.h  dct_lin.h  feature_extraction.h  filters_parameters.h  frequency_features.h  imu_input_55502_w2.h  launcher.h  mfcc_hann_wind.h  time_domain_feat.h  twiddles.h
Applications/CoughDet/single_core/Pico/Src/: feature_extraction.c  filtering.c  filters_parameters.c  frequency_features.c  helpers.c  imu_input_55502_w2.c  kiss_fftr.c  launcher.c  main.c  mfcc_hann_wind.c  mfcc_module.c  randomForest.c  twiddles.c  welch_psd.c
Applications/CoughDet/single_core/Pico/Src/PICO/: gpio_plus_sleep.c
Applications/EmotionClass/single_core/Pico/: CMakeLists.txt  README.md  run_PICO.sh
Applications/EmotionClass/single_core/Pico/Inc/: defines.h
Applications/EmotionClass/single_core/Pico/Inc/PICO/: gpio_plus_sleep.h
Applications/EmotionClass/single_core/Pico/Src/: bindi_knn.c  main.c
Applications/EmotionClass/single_core/Pico/Src/PICO/: gpio_plus_sleep.c
Applications/GestureClass/single_core/Pico/: CMakeLists.txt
Applications/GestureClass/single_core/Pico/Inc/: defines.h  matmul_fp32.h  separator.h  shared_buf.h
Applications/GestureClass/single_core/Pico/Inc/PICO/: gpio_plus_sleep.h
Applications/GestureClass/single_core/Pico/Inc/data/: index.h  rest.h
Applications/GestureClass/single_core/Pico/Src/: clf.c  decomp.c  main.c  matmul_fp32.c
Applications/GestureClass/single_core/Pico/Src/PICO/: gpio_plus_sleep.c
Applications/GestureClass/single_core/Pico/Src/data/: ok.c
Applications/HeartBeatClass/multicore/Pico/: CMakeLists.txt  README.md
Applications/HeartBeatClass/multicore/Pico/Inc/: config.h  defines.h  defines_globals.h  delineation.h  delineationConditioned.h  morpho_filtering.h  peakDetection.h  relativeEnergy.h  rms.h  rp_classifier.h
Applications/HeartBeatClass/multicore/Pico/Inc/Pico_management/: gpio_plus_sleep.h  multicore.h
Applications/HeartBeatClass/multicore/Pico/Inc/data/: signal_250_3leads.h
Applications/HeartBeatClass/multicore/Pico/Src/: delineation.c  delineationConditioned.c  main.c  morpho_filtering.c  peakDetection.c  relativeEnergy.c  rms.c  rp_classifier.c
Applications/HeartBeatClass/multicore/Pico/Src/Pico_management/: gpio_plus_sleep.c  multicore.c
Applications/HeartBeatClass/single_core/Pico/: CMakeLists.txt  Makefile  README.md
Applications/HeartBeatClass/single_core/Pico/Inc/: defines.h  delineation.h
Applications/HeartBeatClass/single_core/Pico/Inc/PICO/: gpio_plus_sleep.h
Applications/HeartBeatClass/single_core/Pico/Inc/data/: signal_250_3leads.h
Applications/HeartBeatClass/single_core/Pico/Src/: delineation.c  delineationConditioned.c  library_int.c  main.c  morpho_filtering.c  rp_classifier.c
Applications/HeartBeatClass/single_core/Pico/Src/PICO/: gpio_plus_sleep.c
Applications/SeizureDetCNN/single_core/Pico/: CMakeLists.txt  Makefile  README.md  run_PICO.sh
Applications/SeizureDetCNN/single_core/Pico/Inc/: defines.h
Applications/SeizureDetCNN/single_core/Pico/Src/: fcn.c  main.c
Applications/SeizureDetCNN/single_core/Pico/Src/PICO/: gpio_plus_sleep.c
Applications/SeizureDetSVM/single_core/Pico/: CMakeLists.txt  README.md
Applications/SeizureDetSVM/single_core/Pico/Inc/: edr.hpp  global_config.hpp  rri_features.hpp
Applications/SeizureDetSVM/single_core/Pico/Inc/PICO/: gpio_plus_sleep.h
Applications/SeizureDetSVM/single_core/Pico/Inc/lib/: fft_look_up_table.hpp  utils.hpp
Applications/SeizureDetSVM/single_core/Pico/Src/: edr_features.cpp  filtering.cpp  main.cpp  procedure.cpp  rri_features.cpp  svm.cpp
Applications/SeizureDetSVM/single_core/Pico/Src/PICO/: gpio_plus_sleep.c
Applications/SeizureDetSVM/single_core/Pico/Src/lib/: fastlomb.cpp  fft.cpp  fixpnt_lin_pred_est.cpp
Applications/Spi_Acquisition/: README.md
Applications/Spi_Acquisition/X-Heep/: README.md  main.c
(+1084 files in other folders)
